--- a/index.html
+++ b/index.html
@@ -494,10 +494,16 @@
 <p>廖雪峰，十年软件开发经验，业余产品经理，精通Java/Python/Ruby/Visual Basic/Objective C等，对开源框架有深入研究，著有《Spring 2.0核心技术与最佳实践》一书，多个业余开源项目托管在<a href="https://github.com/michaelliao" target="_blank">GitHub</a>.</p>
 <p><strong>电子书作者</strong></p>
 <p><a href="https://github.com/lvwzhen/" target="_blank">https://github.com/lvwzhen/</a></p>
-<p><strong>项目地址</strong>
-<a href="https://github.com/lvwzhen/Git-Tutorial" target="_blank">https://github.com/lvwzhen/Git-Tutorial</a></p>
-<p>Pdf 版： <a href="https://github.com/numbbbbb/Git-Tutorial-By-liaoxuefeng" target="_blank">https://github.com/numbbbbb/Git-Tutorial-By-liaoxuefeng</a></p>
+<strong>项目地址</strong>
+<p>Github: <a href="https://github.com/lvwzhen/Git-Tutorial">https://github.com/lvwzhen/Git-Tutorial</a></p>
 
+<p>APP:  <a href="https://itunes.apple.com/cn/app/git-jiao-cheng/id876420437">https://itunes.apple.com/cn/app/git-jiao-cheng/id876420437</a></p>
+
+<p>PDF: <a href="https://github.com/numbbbbb/Git-Tutorial-By-liaoxuefeng">https://github.com/numbbbbb/Git-Tutorial-By-liaoxuefeng</a></p>
+
+<p>Epub: <a href="https://raw.githubusercontent.com/lvwzhen/Git-Tutorial/gh-pages/git-tutorial.epub">https://raw.githubusercontent.com/lvwzhen/Git-Tutorial/gh-pages/git-tutorial.epub</a></p>
+
+<p>Gitbook: <a href="https://www.gitbook.io/book/lvwzhen/Git-Tutorial/">https://www.gitbook.io/book/lvwzhen/Git-Tutorial/</a></p>
                     
                     </section>
                 
